--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,18 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "test-lib": [
+        "dist/test-lib"
+      ],
+      "test-lib/*": [
+        "dist/test-lib/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
-  },
-  "include": [
-    "components/test/test.component.ts",
-    "components/test/test.component.html"
-  ]
+  }
 }
