added form-render code from ucm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
       ],
       "test-lib/*": [
         "dist/test-lib/*"
+      ],
+      "form-renderer": [
+        "dist/form-renderer"
+      ],
+      "form-renderer/*": [
+        "dist/form-renderer/*"
       ]
     }
   },
