--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,41 @@
           }
         }
       }
+    },
+    "form-renderer": {
+      "projectType": "library",
+      "root": "projects/form-renderer",
+      "sourceRoot": "projects/form-renderer/src",
+      "prefix": "form-renderer",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/form-renderer/tsconfig.lib.json",
+            "project": "projects/form-renderer/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/form-renderer/src/test.ts",
+            "tsConfig": "projects/form-renderer/tsconfig.spec.json",
+            "karmaConfig": "projects/form-renderer/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/form-renderer/tsconfig.lib.json",
+              "projects/form-renderer/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
   "defaultProject": "test-lib"
 }
